[package]
name = "quantpiler"
version = "0.3.5"
authors = ["Alexander Averyanov <alex@averyan.ru>"]
edition = "2021"
description = "Сompiler of classical algorithms into oracles for quantum computing"
readme = "README.md"
repository = "https://github.com/averyanalex/quantpiler"
license = "AGPL-3.0-or-later"
categories = ["compilers", "science"]

[lib]
name = "quantpiler"
crate-type = ["cdylib"]

[dependencies]
egg = "0.9.5"

itertools = "0.12.0"
num = "0.4.1"
rand = "0.8.5"
rustc-hash = "1.1.0"
petgraph = "0.6.4"
log = "0.4.20"

pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }

[features]
python = ["pyo3"]
# default = ["python"]

[profile.release]
lto = "thin"
overflow-checks = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
